tests/macros/input/mask.rs
fn main() {
    let q = requestty::questions![Input { mask: todo!() }];
}
